 * mwapidb: return authors alphabetically sorted (fixes: #420)
 * zipcreator: fixed classname from DummyScheduler to DummyJobScheduler; this bug
   broke the --no-threads option